Updated todo list (kind of forgot about it)

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,2 @@
-1. Basic plan is to create basic text with picture in the home page
-2. Taskbar
-3. Links to other projects
-4. Go from there
+1. make jump link smooth
+2. make project pictures bigger on hover and link to github on click
