--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
 1. Add descriptions to everything
 2. Make the project header less plain ?
 3. maybe add some gif or something to get rid of home blank space
+4. Make it scaling appropriate to mobile devices
