--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,3 @@
-1. Add descriptions to everything
-2. Make it scaling appropriate to mobile devices
-3. Hover effects for the upcoming projects
-4. Spice up plain home page somehow
+1. Scaling for smaller devices *havent tested
+2. Spice up plain home page somehow
+3. IDK
