--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,3 @@
-1. Learn js to make headers appear when in viewport -> intersectionobserver
+1. Make contact a new page with forms and stuff
+2. Make contact a button in taskbar
+3. change Taskbar font colour on the pages
