--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
-1. Make contact a new page with forms and stuff
+1. Fix contact form view on mac
 2. Make contact a button in taskbar
 3. change Taskbar font colour on the pages
